--- a/configs/dino_train_config.yaml
+++ b/configs/dino_train_config.yaml
@@ -1,12 +1,13 @@
 train_params:
-    num_epochs: 6
+    num_epochs: 20
     tps: 0.9
     tpt: 0.04
     beta: 0.9
     m: 0.9
     lr: 0.0001
+    max_checkpoints: 1
 
 data:
-    batch_size: 4
+    batch_size: 6
     use_local: True
-    max_images: 25
+    num_images: 120
