--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+absl-py==2.1.0
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiosignal==1.3.1
 antlr4-python3-runtime==4.9.3
 anyio==4.6.0
 argon2-cffi==23.1.0
@@ -15,18 +19,24 @@ charset-normalizer==3.4.0
 comm==0.2.2
 contourpy==1.3.0
 cycler==0.12.1
+datasets==3.0.1
 debugpy==1.8.7
 decorator==5.1.1
 defusedxml==0.7.1
+dill==0.3.8
 executing==2.1.0
 fastjsonschema==2.20.0
 filelock==3.16.1
 fonttools==4.54.1
 fqdn==1.5.1
-fsspec==2024.9.0
+frozenlist==1.4.1
+fsspec==2024.6.1
+gdown==5.2.0
+grpcio==1.67.0
 h11==0.14.0
 httpcore==1.0.6
 httpx==0.27.2
+huggingface-hub==0.26.0
 hydra-core==1.3.2
 idna==3.10
 ipykernel==6.29.5
@@ -52,11 +62,14 @@ jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.13
 kiwisolver==1.4.7
+Markdown==3.7
 MarkupSafe==3.0.1
 matplotlib==3.9.2
 matplotlib-inline==0.1.7
 mistune==3.0.2
 mpmath==1.3.0
+multidict==6.1.0
+multiprocess==0.70.16
 nbclient==0.10.0
 nbconvert==7.16.4
 nbformat==5.10.4
@@ -80,6 +93,7 @@ nvidia-nvtx-cu12==12.1.105
 omegaconf==2.3.0
 overrides==7.7.0
 packaging==24.1
+pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
 pexpect==4.9.0
@@ -87,14 +101,20 @@ pillow==10.4.0
 platformdirs==4.3.6
 prometheus_client==0.21.0
 prompt_toolkit==3.0.48
+propcache==0.2.0
+protobuf==5.28.3
 psutil==6.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==17.0.0
 pycparser==2.22
 Pygments==2.18.0
 pyparsing==3.2.0
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-json-logger==2.0.7
+pytz==2024.2
 PyYAML==6.0.2
 pyzmq==26.2.0
 referencing==0.35.1
@@ -102,6 +122,7 @@ requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.20.0
+scipy==1.14.1
 Send2Trash==1.8.3
 setuptools==75.1.0
 six==1.16.0
@@ -109,6 +130,8 @@ sniffio==1.3.1
 soupsieve==2.6
 stack-data==0.6.3
 sympy==1.13.3
+tensorboard==2.18.0
+tensorboard-data-server==0.7.2
 terminado==0.18.1
 tinycss2==1.3.0
 torch==2.4.1
@@ -120,10 +143,14 @@ traitlets==5.14.3
 triton==3.0.0
 types-python-dateutil==2.9.0.20241003
 typing_extensions==4.12.2
+tzdata==2024.2
 uri-template==1.3.0
 urllib3==2.2.3
 wcwidth==0.2.13
 webcolors==24.8.0
 webencodings==0.5.1
 websocket-client==1.8.0
+Werkzeug==3.0.4
 widgetsnbextension==4.0.13
+xxhash==3.5.0
+yarl==1.15.5
